#Note: -D__cdecl= is temporary until I find a better place to define it
INCLUDES=-I../include -D__cdecl= -Wall

lib_LTLIBRARIES=libG3D.la

libG3D_la_SOURCES= BinaryInput.cpp \
				   BinaryOutput.cpp \
				   TextInput.cpp \
				   System.cpp \
				   Box.cpp \
				   CImage.cpp \
				   CollisionDetection.cpp \
				   Color3.cpp \
				   Color4.cpp \
				   Cone.cpp \
				   ConvexPolyhedron.cpp \
				   CoordinateFrame.cpp \
				   debugAssert.cpp \
				   fileutils.cpp \
				   format.cpp \
				   g3dmath.cpp \
				   Line.cpp \
				   Log.cpp \
				   Matrix3.cpp \
				   PhysicsFrame.cpp \
				   prompt.cpp \
				   Quat.cpp \
				   Ray.cpp \
				   Sphere.cpp \
				   stringutils.cpp \
				   Vector2.cpp \
				   Vector3.cpp \
				   Vector4.cpp \
				   g3derror.cpp \
				   Capsule.cpp \
				   LineSegment.cpp \
				   NetworkDevice.cpp \
				   Plane.cpp
