#INCLUDES=-I../include -D__cdecl= -Wall
INCLUDES=-I../include -Wall

lib_LTLIBRARIES=libG3D.la libG3D_debug.la

libG3D_la_SOURCES= BinaryInput.cpp \
				   BinaryOutput.cpp \
				   Box.cpp \
				   Capsule.cpp \
				   CImage.cpp \
				   CollisionDetection.cpp \
				   Color3.cpp \
				   Color3uint8.cpp \
				   Color4.cpp \
				   Cone.cpp \
				   ConvexPolyhedron.cpp \
				   CoordinateFrame.cpp \
				   debugAssert.cpp \
				   fileutils.cpp \
				   format.cpp \
				   g3dmath.cpp \
				   g3derror.cpp \
				   Line.cpp \
				   LineSegment.cpp \
				   Log.cpp \
				   Matrix3.cpp \
				   NetworkDevice.cpp \
				   PhysicsFrame.cpp \
				   Plane.cpp \
				   prompt.cpp \
				   Quat.cpp \
				   Ray.cpp \
				   Sphere.cpp \
				   stringutils.cpp \
				   System.cpp \
				   TextInput.cpp \
				   Triangle.cpp \
				   Vector2.cpp \
				   Vector3.cpp \
				   Vector3int16.cpp \
				   Vector4.cpp

libG3D_debug_la_SOURCES= BinaryInput.cpp \
				   BinaryOutput.cpp \
				   Box.cpp \
				   Capsule.cpp \
				   CImage.cpp \
				   CollisionDetection.cpp \
				   Color3.cpp \
				   Color3uint8.cpp \
				   Color4.cpp \
				   Cone.cpp \
				   ConvexPolyhedron.cpp \
				   CoordinateFrame.cpp \
				   debugAssert.cpp \
				   fileutils.cpp \
				   format.cpp \
				   g3dmath.cpp \
				   g3derror.cpp \
				   Line.cpp \
				   LineSegment.cpp \
				   Log.cpp \
				   Matrix3.cpp \
				   NetworkDevice.cpp \
				   PhysicsFrame.cpp \
				   Plane.cpp \
				   prompt.cpp \
				   Quat.cpp \
				   Ray.cpp \
				   Sphere.cpp \
				   stringutils.cpp \
				   System.cpp \
				   TextInput.cpp \
				   Triangle.cpp \
				   Vector2.cpp \
				   Vector3.cpp \
				   Vector3int16.cpp \
				   Vector4.cpp

libG3D_debug_la_CPPFLAGS= -D_DEBUG
