nobase_include_HEADERS=G3D/Array.h \
                       G3D/BinaryInput.h \
                       G3D/BinaryOutput.h \
                       G3D/Box.h \
                       G3D/CImage.h \
                       G3D/Capsule.h \
                       G3D/CollisionDetection.h \
                       G3D/Color3.h \
                       G3D/Color3.inl \
                       G3D/Color4.h \
                       G3D/Color4.inl \
                       G3D/Cone.h \
                       G3D/ConvexPolyhedron.h \
                       G3D/CoordinateFrame.h \
                       G3D/G3DGameUnits.h \
                       G3D/GLight.h \
                       G3D/GCamera.h \
                       G3D/Line.h \
                       G3D/LineSegment.h \
                       G3D/Log.h \
                       G3D/Matrix3.h \
                       G3D/MeshAlg.h \
                       G3D/NetworkDevice.h \
                       G3D/PhysicsFrame.h \
                       G3D/Plane.h \
                       G3D/Quat.h \
                       G3D/Quat.inl \
                       G3D/Queue.h \
                       G3D/Ray.h \
                       G3D/ReferenceCount.h \
                       G3D/Set.h \
                       G3D/Sphere.h \
                       G3D/System.h \
                       G3D/Table.h \
                       G3D/TextInput.h \
                       G3D/Vector2.h \
                       G3D/Vector2.inl \
                       G3D/Vector3.h \
                       G3D/Vector3.inl \
                       G3D/Vector4.h \
                       G3D/Vector4.inl \
                       G3D/debug.h \
                       G3D/debugAssert.h \
                       G3D/debugPrintf.h \
                       G3D/fileutils.h \
                       G3D/format.h \
                       G3D/g3derror.h \
                       G3D/g3dmath.h \
                       G3D/g3dmath.inl \
                       G3D/mainpage.h \
                       G3D/prompt.h \
                       G3D/stringutils.h \
                       G3D/vectorMath.h \
                       GLG3D/CFont.h \
                       GLG3D/GPUProgram.h \
                       GLG3D/VertexProgram.h \
                       GLG3D/PixelProgram.h \
                       GLG3D/LightingParameters.h \
                       GLG3D/ManualCameraController.h \
                       GLG3D/RenderDevice.h \
                       GLG3D/IFSModel.h \
                       GLG3D/PosedModel.h \
                       GLG3D/MD2Model.h \
                       GLG3D/Texture.h \
                       GLG3D/UserInput.h \
                       GLG3D/getOpenGLState.h \
                       GLG3D/glcalls.h \
                       GLG3D/glheaders.h
