INCLUDES=-I../../../source/include -Wall -DDEBUG

lib_LTLIBRARIES=libG3D_debug.la

libG3D_debug_la_SOURCES= ../../../source/G3Dcpp/BinaryInput.cpp \
                         ../../../source/G3Dcpp/BinaryOutput.cpp \
                         ../../../source/G3Dcpp/Box.cpp \
                         ../../../source/G3Dcpp/CImage.cpp \
                         ../../../source/G3Dcpp/Capsule.cpp \
                         ../../../source/G3Dcpp/CollisionDetection.cpp \
                         ../../../source/G3Dcpp/Color3.cpp \
                         ../../../source/G3Dcpp/Color3uint8.cpp \
                         ../../../source/G3Dcpp/Color4.cpp \
                         ../../../source/G3Dcpp/Color4uint8.cpp \
                         ../../../source/G3Dcpp/Cone.cpp \
                         ../../../source/G3Dcpp/ConvexPolyhedron.cpp \
                         ../../../source/G3Dcpp/CoordinateFrame.cpp \
                         ../../../source/G3Dcpp/Discovery.cpp \
                         ../../../source/G3Dcpp/GLight.cpp \
                         ../../../source/G3Dcpp/GCamera.cpp \
                         ../../../source/G3Dcpp/Line.cpp \
                         ../../../source/G3Dcpp/LineSegment.cpp \
                         ../../../source/G3Dcpp/Log.cpp \
                         ../../../source/G3Dcpp/Matrix3.cpp \
                         ../../../source/G3Dcpp/Matrix4.cpp \
			 ../../../source/G3Dcpp/MeshAlg.cpp \
			 ../../../source/G3Dcpp/MeshAlgAdjacency.cpp \
                         ../../../source/G3Dcpp/NetworkDevice.cpp \
                         ../../../source/G3Dcpp/PhysicsFrame.cpp \
                         ../../../source/G3Dcpp/Plane.cpp \
                         ../../../source/G3Dcpp/Quat.cpp \
                         ../../../source/G3Dcpp/Ray.cpp \
                         ../../../source/G3Dcpp/Sphere.cpp \
                         ../../../source/G3Dcpp/System.cpp \
                         ../../../source/G3Dcpp/TextInput.cpp \
                         ../../../source/G3Dcpp/Triangle.cpp \
                         ../../../source/G3Dcpp/Vector2.cpp \
                         ../../../source/G3Dcpp/Vector2int16.cpp \
                         ../../../source/G3Dcpp/Vector3.cpp \
                         ../../../source/G3Dcpp/Vector3int16.cpp \
                         ../../../source/G3Dcpp/Vector4.cpp \
                         ../../../source/G3Dcpp/debugAssert.cpp \
                         ../../../source/G3Dcpp/fileutils.cpp \
                         ../../../source/G3Dcpp/format.cpp \
                         ../../../source/G3Dcpp/g3derror.cpp \
                         ../../../source/G3Dcpp/g3dmath.cpp \
                         ../../../source/G3Dcpp/prompt.cpp \
                         ../../../source/G3Dcpp/stringutils.cpp 

#libG3D_debug_la_CPPFLAGS= -D_DEBUG
