noinst_LIBRARIES=libG3D_debug.a

libG3D_debug_a_SOURCES= ../../../source/G3Dcpp/AABox.cpp \
                         ../../../source/G3Dcpp/BinaryInput.cpp \
                         ../../../source/G3Dcpp/BinaryOutput.cpp \
                         ../../../source/G3Dcpp/Box.cpp \
                         ../../../source/G3Dcpp/GImage.cpp \
                         ../../../source/G3Dcpp/Capsule.cpp \
                         ../../../source/G3Dcpp/CollisionDetection.cpp \
                         ../../../source/G3Dcpp/Color3.cpp \
                         ../../../source/G3Dcpp/Color3uint8.cpp \
                         ../../../source/G3Dcpp/Color4.cpp \
                         ../../../source/G3Dcpp/Color4uint8.cpp \
                         ../../../source/G3Dcpp/Cone.cpp \
                         ../../../source/G3Dcpp/ConvexPolyhedron.cpp \
                         ../../../source/G3Dcpp/CoordinateFrame.cpp \
                         ../../../source/G3Dcpp/Discovery.cpp \
                         ../../../source/G3Dcpp/GLight.cpp \
                         ../../../source/G3Dcpp/GCamera.cpp \
                         ../../../source/G3Dcpp/license.cpp \
                         ../../../source/G3Dcpp/Line.cpp \
                         ../../../source/G3Dcpp/LineSegment.cpp \
                         ../../../source/G3Dcpp/Log.cpp \
                         ../../../source/G3Dcpp/Matrix3.cpp \
                         ../../../source/G3Dcpp/Matrix4.cpp \
                         ../../../source/G3Dcpp/MeshAlg.cpp \
                         ../../../source/G3Dcpp/MeshAlgAdjacency.cpp \
					     ../../../source/G3Dcpp/MeshAlgWeld.cpp \
                         ../../../source/G3Dcpp/NetworkDevice.cpp \
                         ../../../source/G3Dcpp/NetMessage.cpp \
                         ../../../source/G3Dcpp/PhysicsFrame.cpp \
                         ../../../source/G3Dcpp/Plane.cpp \
                         ../../../source/G3Dcpp/Quat.cpp \
                         ../../../source/G3Dcpp/Ray.cpp \
                         ../../../source/G3Dcpp/Sphere.cpp \
                         ../../../source/G3Dcpp/System.cpp \
                         ../../../source/G3Dcpp/TextInput.cpp \
                         ../../../source/G3Dcpp/TextOutput.cpp \
                         ../../../source/G3Dcpp/Triangle.cpp \
                         ../../../source/G3Dcpp/Vector2.cpp \
                         ../../../source/G3Dcpp/Vector2int16.cpp \
                         ../../../source/G3Dcpp/Vector3.cpp \
                         ../../../source/G3Dcpp/Vector3int16.cpp \
                         ../../../source/G3Dcpp/Vector4.cpp \
                         ../../../source/G3Dcpp/debugAssert.cpp \
                         ../../../source/G3Dcpp/fileutils.cpp \
                         ../../../source/G3Dcpp/format.cpp \
                         ../../../source/G3Dcpp/g3derror.cpp \
                         ../../../source/G3Dcpp/g3dmath.cpp \
                         ../../../source/G3Dcpp/prompt.cpp \
                         ../../../source/G3Dcpp/stringutils.cpp \
                         ../../../source/png/png.c \
                         ../../../source/png/pngerror.c \
                         ../../../source/png/pnggccrd.c \
                         ../../../source/png/pngget.c \
                         ../../../source/png/pngmem.c \
                         ../../../source/png/pngpread.c \
                         ../../../source/png/pngread.c \
                         ../../../source/png/pngrio.c \
                         ../../../source/png/pngrtran.c \
                         ../../../source/png/pngrutil.c \
                         ../../../source/png/pngset.c \
                         ../../../source/png/pngtrans.c \
                         ../../../source/png/pngvcrd.c \
                         ../../../source/png/pngwio.c \
                         ../../../source/png/pngwrite.c \
                         ../../../source/png/pngwtran.c \
                         ../../../source/png/pngwutil.c

libG3D_debug_a_CPPFLAGS=-I../../../source/include -Wall -D_DEBUG

