noinst_LIBRARIES= libGLG3D_debug.a

libGLG3D_debug_a_SOURCES= ../../../source/GLG3Dcpp/DDSTexture.cpp \
                        ../../../source/GLG3Dcpp/DXCaps.cpp \
                        ../../../source/GLG3Dcpp/Draw.cpp \
                        ../../../source/GLG3Dcpp/Framebuffer.cpp \
                        ../../../source/GLG3Dcpp/G3DGameUnits.cpp \
                        ../../../source/GLG3Dcpp/GApp.cpp \
                        ../../../source/GLG3Dcpp/GFont.cpp \
                        ../../../source/GLG3Dcpp/GLCaps.cpp \
                        ../../../source/GLG3Dcpp/GModule.cpp \
                        ../../../source/GLG3Dcpp/GPUProgram.cpp \
                        ../../../source/GLG3Dcpp/GWindow.cpp \
                        ../../../source/GLG3Dcpp/IFSModel.cpp \
                        ../../../source/GLG3Dcpp/LightingParameters.cpp \
                        ../../../source/GLG3Dcpp/MD2Model.cpp \
                        ../../../source/GLG3Dcpp/MD2Model_load.cpp \
                        ../../../source/GLG3Dcpp/ManualCameraController.cpp \
                        ../../../source/GLG3Dcpp/Milestone.cpp \
                        ../../../source/GLG3Dcpp/PixelProgram.cpp \
                        ../../../source/GLG3Dcpp/PosedModel.cpp \
                        ../../../source/GLG3Dcpp/RenderDevice.cpp \
                        ../../../source/GLG3Dcpp/Renderbuffer.cpp \
                        ../../../source/GLG3Dcpp/SDLWindow.cpp \
                        ../../../source/GLG3Dcpp/Shader.cpp \
                        ../../../source/GLG3Dcpp/Shape.cpp \
                        ../../../source/GLG3Dcpp/Sky.cpp \
                        ../../../source/GLG3Dcpp/Texture.cpp \
                        ../../../source/GLG3Dcpp/TextureFormat.cpp \
                        ../../../source/GLG3Dcpp/ThirdPersonManipulator.cpp \
                        ../../../source/GLG3Dcpp/UserInput.cpp \
                        ../../../source/GLG3Dcpp/VAR.cpp \
                        ../../../source/GLG3Dcpp/VARArea.cpp \
                        ../../../source/GLG3Dcpp/VertexProgram.cpp \
                        ../../../source/GLG3Dcpp/Win32Window.cpp \
                        ../../../source/GLG3Dcpp/directinput8.h \
                        ../../../source/GLG3Dcpp/edgeFeatures.cpp \
                        ../../../source/GLG3Dcpp/getOpenGLState.cpp \
                        ../../../source/GLG3Dcpp/glcalls.cpp \
                        ../../../source/GLG3Dcpp/glenumtostring.cpp \
                        ../../../source/GLG3Dcpp/shadowVolume.cpp \
                        ../../../source/GLG3Dcpp/tesselate.cpp

libGLG3D_debug_a_CPPFLAGS=-I../../../source/include -Wall $(SDL_CFLAGS) -D_DEBUG
